--- a/tekwill2021-exemple/public/style.css
+++ b/tekwill2021-exemple/public/style.css
@@ -65,7 +65,7 @@ ul li ul li:hover{
     opacity: 0.5;
     padding: 5px;
     margin-bottom: 1px;
-    border: 1px dotted green;
+    border: 1px dotted rgb(15, 48, 15);
     padding-left: 35px;
     text-transform: uppercase;
 }
